test_src/compiler_errors/control_flow/DuplicateSwitchLabel1.b
class DuplicateSwitchLabel1 {
    void test() {
        switch (1) {
            case 1:
                break;
            case 2:
                break;
            case 1:
                break;
        }
    }
}
